<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/blurrybackground">

    <ImageView
        android:id="@+id/sheep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sheep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/sheep" />

    <ImageView
        android:id="@+id/speechBubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default1" />

    <Button
        android:id="@+id/fight"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="#e7949c"
        android:onClick="attack"
        android:stateListAnimator="@null"
        android:text="@string/fight"
        android:textColor="#EEEEEE"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/hug"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheep" />

    <Button
        android:id="@+id/hug"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="#e7a887"
        android:onClick="hugged"
        android:stateListAnimator="@null"
        android:text="@string/hug"
        android:textColor="#EEEEEE"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheep" />

    <Button
        android:id="@+id/treat"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="26sp"
        android:background="#8fc0cb"
        android:textStyle="bold"
        android:textColor="#EEEEEE"
        android:layout_marginTop="4dp"
        android:text="@string/treat"
        android:onClick="eat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fight"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/shears"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:textSize="26sp"
        android:onClick="shaved"
        android:background="#a7cd9b"
        android:textColor="#EEEEEE"
        android:layout_marginTop="4dp"
        android:text="@string/shears"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/treat"
        app:layout_constraintTop_toBottomOf="@+id/hug"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/sing"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:textSize="26sp"
        android:background="#e4c491"
        android:textColor="#EEEEEE"
        android:layout_marginLeft="1dp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/sing"
        android:onClick="serenaded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/shears"
        app:layout_constraintTop_toBottomOf="@+id/hug"
        android:stateListAnimator="@null" />

    <ImageView
        android:id="@+id/attacking"
        android:layout_width="840dp"
        android:layout_height="840dp"
        android:contentDescription="@string/attackSheep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504"
        app:srcCompat="@drawable/empty" />

    <TextView
        android:id="@+id/lockedOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:contentDescription="@string/reset"
        android:text="@string/timer"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>